...
    <string name="delete_user_details_required_header">Please enter</string>
    <string name="delete__user_error_unable_to_delete">Sorry. We cannot find that user. Please try again</string>

    <!--Added automatically by Android Studio -->
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
...
    <!-- miscellaneous-->
    <string name="mandatory_indicator">*</string>
    <string name="missing_details_header">Please enter</string>
    <string name="login_error_header">Please enter your</string>

    <!-- from assignment 2 -->
    <string name="login_button_label">Login</string>
    <string name="login_error_user_name">User Name</string>
    <string name="login_error_password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_home_header">Home</string>
    <string name="tab_text_inventory">Inventory</string>
    <string name="logout">Logout</string>
    <string name="welcome_message_header">Welcome</string>
    <string name="add_inventory_title">Add Inventory Item</string>
    <string name="inventory_name_label">Item Name</string>
    <string name="inventory_quantity_label">Quantity</string>
    <string name="required">Required</string>
    <string name="add">Add</string>

    <!-- general purpose strings -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>>
    <string name="previous">Previous</string>

    <!-- inventory strings -->
    <string name="action_clear_items">Clear Items</string>
    <string name="action_add_test_items">Add Test Items</string>
    <string name="missing_inventory_item_name">Item Name</string>
    <string name="missing_inventory_item_quantity">Quantity</string>
    <string name="duplicate_inventory_item">Sorry. That item is already in inventory</string>
    <string name="added_to_inventory">added to Inventory</string>
    <string name="discarding_title">Discarding</string>
    <string name="discard_warning_message">Do you want to discard this draft inventory item?</string>
...
