<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity">

        <TextView
            android:id="@+id/textUserNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/user_name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextUserName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/password_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textDateOfBirthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/date_of_birth_field_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextDateOfBirth"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textEmployeeNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/employee_number_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextEmployeeNumber"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textPhoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/phone_number_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhoneNumber"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/address_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textErrorMessageAdd" />

        <Button
            android:id="@+id/buttonAdd"
...
