...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inventory"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/nav_users"
            android:title="@string/menu_users" />
    </group>
</menu>
